--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/rweitman/liri-node-app#readme",
   "dependencies": {
+    "node-spotify-api": "^1.0.5",
     "omdb": "^0.8.0",
     "spotify": "^0.3.0",
     "twitter": "^1.7.1"
